fix padding on seeds without avatars on mobile

--- a/src/css/seeds/post.less
+++ b/src/css/seeds/post.less
@@ -249,8 +249,6 @@
   .post-container {
     margin-left: 0;
     @media (max-width: @screen-xs-max) {
-      padding: 0;
-
       .post-options {
         top: 0;
       }
